--- a/src/main/resources/templates/list-concert.html
+++ b/src/main/resources/templates/list-concert.html
@@ -8,8 +8,18 @@
 <body>
     <h1>Concert List</h1>
     <a href="/add-concert/">Add Concert</a>
-    <!-- TODO: show delete link for each concert -->
+    <a href="/delete-concert/">Delete Concert</a>
 
-    <!-- TODO: Add list of concerts -->
+    <!-- TODO: show delete link for each concert -->
+    <ul>
+        <li th:each="concert : ${concerts}">
+            <a th:href="@{/delete-concert/{id}(id=${concert.id})}">Delete</a>
+            <span th:href="${concert.title}"></span>
+            <span th:href="${concert.performer}"></span>
+            <span th:href="${concert.date}"></span>
+            <span th:href="${concert.description}"></span>
+        </li>
+    </ul>
+    
 </body>
 </html>
